syntax = "proto2";

package logs.proto.tuningfork;

import "tuningfork.proto";

message TuningForkLogEvent {
  // FidelityParams message serialization defined by the developer
  optional bytes fidelityparams = 1;
  optional string experiment_id = 2;
  repeated TuningForkHistogram histograms = 3;
}

message TuningForkHistogram {
  // ID of the frame capture point
  optional int32 instrument_id = 1;
  // Annotation message serialization defined by the developer
  optional bytes annotation = 2;
  // Bucket counts.
  // The APK contains hard-coded bucket ranges for each instrument_id.
  repeated int32 counts = 3 [packed=true];
}
